# nex-lang

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run.py
.github/workflows/: docs.yml  pypi-release.yml  unit-tests.yml
docs/: book.toml
docs/src/: README.md  SUMMARY.md  stabilizing-the-core.md
docs/src/reference/: README.md  built-in-functions.md  diagnostics-and-errors.md  expressions-and-operators.md  functions-and-return.md  grammar.md  lexical-structure.md  scopes-and-bindings.md  statements-and-control-flow.md  types-and-values.md
docs/theme/: head.hbs  nex-highlight.js  nex.css
editors/vscode/nex-syntax/: README.md  language-configuration.json  package.json
editors/vscode/nex-syntax/syntaxes/: nex.tmLanguage.json
examples/: comparison.nex  fibo.nex  fizzbuzz.nex  for.nex  function.nex  grid.nex  hello.nex  input.nex  math.nex  strings.nex  test.nex  version.nex  while.nex
examples/primes/: README.md  expensive_prime_scan.nex  first_n_primes.nex  is_prime.nex  next_prime.nex  prime_factorization.nex  primes_in_range.nex  sieve.nex
examples/sequences/: README.md  collatz.nex  factorials.nex  fibonacci.nex  powers_of_two.nex  triangular_numbers.nex
nex/: __init__.py  ast.py  cli.py  environment.py  expr.py  interpreter.py  pretty_printer.py  stmt.py
nex/common/: __init__.py  error.py
nex/interpreter/: __init__.py  builtin.py  environment.py  expr.py  function.py  function_store.py  interpreter.py  nex_array.py  program.py  stmt.py
nex/lexer/: __init__.py  keywords.py  lexer.py  token.py  tokentype.py
nex/parser/: __init__.py  parser.py
scripts/: check_ascii.py  check_release_version.py  create_release_tag.py  generate_grammar_diagrams.py
tests/: test_ascii_lint.py  test_cli.py  test_e2e.py  test_grammar_diagrams.py  test_interpreter.py  test_lexer.py  test_parser.py  test_pretty_printer.py  test_release_version_check.py
tests/input/: fibo.nex  for.nex  gcd_lcm.nex  hello.nex  math.nex  prime_report.nex  scope.nex  short_circuit.nex  string_pyramid.nex  while.nex
