[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nex"
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pre-commit>=4", "pytest>=8", "ruff>=0.6"]

[project.scripts]
nex = "nex.cli:main"

[tool.setuptools.packages.find]
include = ["nex", "nex.*"]

[tool.setuptools.dynamic]
version = { attr = "nex.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = '-m "not repo_checks"'
markers = [
    "repo_checks: repository-wide checks that are slower than normal unit tests",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
